--- a/accommodation.html
+++ b/accommodation.html
@@ -11,7 +11,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
                
               <p class="body"><strong>We are pleased to announce that the 6<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'19) will be held at the Hotel Real Palácio.</strong> More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! This discounted rate is only valid until May 12, 2019.</p>
 
-              <a href="../RealPalacioLisbonBookingForm.pdf" target="_blank"><i class="fas fa-hotel fa-2x sr-icons"></i> Discounted Rate Booking Form</a>
+              <a href="../RealPalacioLisbonBookingForm.pdf" class="body-link" target="_blank"><i class="fas fa-hotel fa-2x sr-icons"></i> Discounted Rate Booking Form</a>
 
               <center><a href="http://www.realpalacio.realhotelsgroup.com" target="_blank" class="body-link"><img src="../img/realpalacio_logo.png" class="flex-sponsor"></a></center>
               <br>
@@ -20,12 +20,12 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
               <strong>Hotel Real Palácio</strong><br>
               <a target="_blank" href="https://goo.gl/maps/2nzrHVxWGGs" class="body-link">R. Tomás Ribeiro 115 <br>
               1050-228 Lisboa, Portugal </a><br>
-              +351 21 319 9500
+          
                <br>
               </p>
               </center>
 
-        <p class="body">We will provide a list of other nearby accommodations to the venue soon! Thank you for your patience.</p>
+        <p class="body"><br>We will provide a list of other nearby accommodations to the venue soon! Thank you for your patience.</p> 
    
  <!-- <p class="body"><strong>We are pleased to announce that the 6<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'19) will be held at the Novotel Madrid Center. </strong> More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Novotel Madrid Center.</p>
 
