--- a/keynote.html
+++ b/keynote.html
@@ -36,69 +36,51 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
   </div>   <!-- End Keynotes -->
 
 
- <!-- <span class="anchor" id="Dr. Chamil Abeykoon"></span>
+ <span class="anchor" id="Dr. Thomas Adams"></span>
   <div class="keynote-info">
-  <p class="bold">Dr. Chamil Abeykoon</p><img src="../img/Abeykoon.jpg" width="170" align="right" class="keynote-img">
-  <p class="body">Chamil received his BSc (Hons) in Mechanical Engineering from the University of Peradeniya, Sri Lanka with the award of best performance in Mechanical Engineering in 2007. Then, he received his PhD in Mechanical Engineering in 2011 from the Queens University Belfast, UK with several publications where one of his publications was awarded with a young author best paper award from the IEEE in 2011. After having a few academic positions, Chamil joined the Faculty of Science and Engineering of University of Manchester (UoM) as an Assistant Professor in October 2015. Currently Chamil is working mainly with the Northwest Composts Centre and the Aerospace Research Institute of the UoM. So far, he has authored 35+ peer-reviewed journal/conference papers. Moreover, he is the author of the monograph Polymer Extrusion: A Study on Thermal Monitoring Techniques and Melting Issues. His research interests include: Process Monitoring, Modelling and Control; Soft Sensors and Soft Sensing; Process Instrumentation; Energy Efficiency; and Heat Transfer. At present, he is mainly researching in the areas such as melt flow behaviour in polymer processing, 3D printing, development of inferential (soft) sensors for processing applications, heat transfer (heat flow and cooling) in gas turbine applications. He is an associate member of the IESL, IMechE, ICPM and also a Fellow of the Higher Education Academy UK.</p>
+  <p class="bold">Dr. Thomas Adams</p><img src="../img/Adams.jpg" width="170" align="right" class="keynote-img">
+  <p class="body">Thom Adams is currently Professor of Mechanical Engineering at Rose-Hulman Institute of Technology, USA. He earned his BS in Mechanical Engineering from Rose-Hulman Institute of Technology, and his MS and PhD in Mechanical Engineering from Georgia Institute of Technology. Having won multiple best paper awards for his work in technical research as well as engineering education, he is one of only a handful of faculty ever to have received both the Institute’s Outstanding Scholar Award and Outstanding Teaching Award. His early work in single-phase and two-phase heat transfer in microchannels represents some of the seminal work in the field. He has since become a leading educator in the field of micro-electro-mechanical systems (MEMS) and has authored a first of its kind textbook on the subject aimed at an audience of undergraduate technical majors regardless of specific discipline. His current research focuses on what he calls the “scholarship of generalisation,” in which physical systems and processes are purposely modelled using the most fundamental concepts and methods available in order to ascertain physical trends and correlations that often go unnoticed when relying solely the techniques of modern specialized research.  </p>
 
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Investigation of Thermal Stability of Non-Newtonian Melt Flows</p>-->
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Microscale Thermal-Fluids: Still Plenty of Room at the Bottom</p>
 
-  <!-- <a href="../paper/Keynote - Dr. Abeykoon.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a> -->
+ <a href="../paper/Keynote - Dr. Adams.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
 
-  <!--<div class="top"><a href="#top">top</a></div>
+ <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
   </div> <!-- End Keynote Info-->
 
 
 
- <!--<span class="anchor" id="Dr. Jalel Azaiez"></span>
+ <span class="anchor" id="Dr. Huihe Qiu"></span>
  <div class="keynote-info">
- <p class="bold">Dr. Jalel Azaiez</p> <img src="../img/Azaiez.jpg" width="170" align="right" class="keynote-img"> 
- <p class="body">Jalel Azaiez is currently a Professor at the Department of Chemical and Petroleum Engineering in the University of Calgary (Canada). He is also Associate Dean in the Faculty of Graduate Studies. He holds a Dilôme d’Ingénieur from the Ecole Centrale de Paris (France) and a M.Sc. and Ph.D. from Stanford University (U.S.A.) both in Chemical Engineering. 
-His recent research focuses on modelling fluid flow instabilities and in particular those involving complex flows in porous media. These include non-isothermal flows with or without chemical reactions, involving Newtonian and non-Newtonian fluids with a particular focus on nanofluids in micro-geometries. His research team has developed a number of software and mathematical algorithms to analyze flow instabilities under a wide variety of conditions that have applications in the fields of oil recovery, soil remediation and materials processing. He holds a number of awards on his research and teaching accomplishments. He serves on the editorial board of three Journals and has presented invited talks and seminars in numerous worldwide forums (Belgium, France, Japan, USA, etc.).</p>
+ <p class="bold">Dr. Huihe Qiu</p> <img src="../img/Qiu.jpg" width="170" align="right" class="keynote-img"> 
+ <p class="body">Professor Huihe Qiu is currently Head of Department of Mechanical and Aerospace Engineering at The Hong Kong University of Science & Technology (HKUST) and Director of the Building Energy Research Center (BERC) of the HKUST Nansha Fok Ying Tung Graduate School. Professor Qiu received his Ph.D. degree from Institute of Fluid Mechanics, LSTM, at the University of Erlangen, Germany in 1994. Professor Qiu’s research areas are in, multiphase flow and heat transfer, fluid dynamics, optical diagnostics, nano- and microfluids and flapping wing aerodynamics. Professor Qiu is Editor-in-Chief/Editor/Associate Editor of four international journals and a member of the editorial board for more than 10 international journals, such as the members of Editorial Advisory Board of Experiments in Fluids. He has been invited to give 21 plenary and keynote speeches in International Conferences. He is the recipient of the Best Paper Award of Institute of Physics (IOP) in 1994, Philips Outstanding Paper Award in the International Conference on Electronic Packaging Technology and High Density Packaging (2012), ASME Best Poster Award (2010), Best Paper Award, 2nd World Congress on Mechanical, Chemical, Material Engineering (2016), Best Paper Award, 4th International Conference on Heat Transfer and Fluid Flow (2017), The State Scientific and Technological Progress Award (SSTPA) and the Scientific and Technological Achievement Award from the State Education Commission.</p>
 
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Active Control of Viscous Fingering Instabilities in Porous Media Flows</p>
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Interfacial Dynamics and Heat Transfer of Microdroplets on Biphilic Micro/Nanostructured Surfaces</p>
 
-  <a href="../paper/Keynote - Dr.Azaiez.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
+  <a href="../paper/Keynote - Dr. Qiu.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div>--> <!-- End Keynote Info-->
+  </div> <!-- End Keynote Info-->
 
 
-
-  <!--<span class="anchor" id="Dr. Mohamed Hamed"></span>
+<span class="anchor" id="Dr. Louis Gosselin"></span>
  <div class="keynote-info">
- <p class="bold">Dr. Mohamed Hamed</p> <img src="../img/Hamed.jpg" width="170" align="right" class="keynote-img"> 
- <p class="body">Mohamed Hamed is a Professor of Mechanical Engineering and the Founding Director of the Thermal Processing Laboratory (TPL) at The Department of
-Mechanical Engineering, McMaster University, Canada. His research interests are
-in modelling fluid flow, heat transfer, and materials processes of various thermofluid systems. His research involves laboratory scale experiments and numerical
-modelling techniques. His research contributions have been disseminated in more
-than 100 scientific publications. Dr. Hamed has taught several undergraduate and
-graduate courses: Fluid Mechanics, Computational Fluid Dynamics, Modeling of
-Thermal Processes, Advanced Fluid Mechanics. He has developed a number of
-technical courses for practicing engineers in the areas of Optimization of Energy
-Efficiencies in Industrial Processes, Advanced Energy Management, Renewable
-Energy Systems, and Heating, Ventilation and Air Conditioning Sustems. Dr.
-Hamed is a Registered Professional Engineer in the Province of Ontario, Canada
-and a Member of different professional societies such as: CSME, ASME, ASM
-Heat Treating Society, SME, ASHRAE, and CFD Society of Canada. He is the
-Editor-In-Chief of the Universal Journal of Mechanical Engineering and an
-Associate Editor and Editorial Board Member of various National and
-International journals: Transactions of the Canadian Society of Mechanical
-Engineers (CSME), The International Journal of Microstructure and Materials
-Properties (IJMMP), The International Journal of Computational Thermal
-Sciences, Journal of Materials Performance and Characterization, and The
-International Journal of Electronics Cooling and Thermal Control. He is also a
-technical reviewer in more than thirty technical international journals and funding agencies. </p>
+ <p class="bold">Dr. Louis Gosselin</p> <img src="../img/Gosselin.jpg" width="170" align="right" class="keynote-img"> 
+ <p class="body">Louis Gosselin is currently a professor of mechanical engineering at Université Laval in Quebec City, Canada. He received his bachelor’s degree in physics from Université de Sherbrooke (Canada) and his master’s degree in chemical engineering from the same institution. He obtained his Ph.D. in mechanical engineering at Duke University (USA) in 2004. 
+Professor Gosselin has been involved in a number of collaborative research projects with the industry on energy efficiency and energy management in buildings and in industrial processes. His research interests include the modeling and optimization of heat transfer and thermodynamics systems. Recently, he worked on geothermal energy, waste heat recovery, primary production of aluminum, smart control of thermal systems, advanced building envelopes, demand-side management, solid-liquid phase change, impact of humans on energy efficiency, thermal storage, and energy issues in the high north.
+From 2012 to 2019, he held the Chair in educational leadership on sustainable engineering at Université Laval. Louis Gosselin is a registered P. Eng. in the province of Québec.
+ </p>
 
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Jet Impingement Boiling Heat Transfer-A Complex and Effective Phenomenon</p>
+ <p class="keynote-topic"><b>Topic of Keynote:</b> Role of Heat Transfer R&D Community in Addressing Interdisciplinary Energy Challenges</p>
 
-  <a href="../paper/Keynote - Dr.Hamed.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
+  <a href="../paper/Keynote - Dr. Gosselin.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a> 
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div> --><!-- End Keynote Info-->
+  </div> <!-- End Keynote Info-->
+
 
   
 
